--- a/index.html
+++ b/index.html
@@ -25,23 +25,43 @@
                 <a href="contact.html"> Contact </a>
             </li>
             <li>
-                <a href="https://github.com/DevenPatel19" target="_blank"><img class="icon" height="50" src="./assets/github.gif" alt="LinkedIn"></a>
+                <a href="https://github.com/DevenPatel19" target="_blank"><img class="icon" height="50"
+                        src="./assets/github.gif" alt="LinkedIn"></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/devenhjpatel/" target="_blank"><img class="icon" src="./assets/linkedin.gif" alt="LinkedIn"></a>
+                <a href="https://www.linkedin.com/in/devenhjpatel/" target="_blank"><img class="icon"
+                        src="./assets/linkedin.gif" alt="LinkedIn"></a>
             </li>
         </ul>
 
     </nav>
-    <main>
-        <div class="carousel">
-            <img src="./assets/placeholder.jpg" alt="Carousel Place Holder" height="500" width="800">
+    <div class="main">
+        <section aria-label="Newest Photos">
+            <div class="carousel" data-carousel>
+                <button class="carousel-button prev" data-carousel-button="prev">&#8656;</button>
+                <button class="carousel-button next" data-carousel-button="next">&#8658;</button>
+                <ul data-slides>
+                    <li class="slide" data-active>
+                        <img src="./assets/slide1.jpg" alt="Project Image #1">
+                    </li>
+                    <li class="slide">
+                        <img src="./assets/slide2.jpg" alt="Project Image #2">
+                    </li>
+                    <li class="slide">
+                        <img src="./assets/slide3.jpg" alt="Project Image #3">
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        </section>
+        <div class="read">
+            <h3>About Me</h3>
+            <p>I am Deven, a Full Stack Developer and passionate coder. Always interested in learning and building new
+                things.</p>
         </div>
-        <h3>About Me</h3>
-        <p>I am Deven, a Full Stack Developer and passionate coder. Always interested in learning and building new
-            things.</p>
-    </main>
-    <script src="./js/script.js"></script>
+        </main>
+        <script src="./js/script.js"></script>
 </body>
 
 </html>
