--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
     </nav>
     <main>
         <div class="card">
-            <img src="./assets/placeholder.jpg" alt="Project#" height="250" width="350">
+            <img src="./assets/slide1.jpg" alt="Project#" height="250" width="350">
             <div class="side">
                 <div class="content">
                     <h4>Project 1</h4>
@@ -49,10 +49,10 @@
             </div>
         </div>
         <div class="card">
-            <img src="./assets/placeholder.jpg" alt="Project#" height="250" width="350">
+            <img src="./assets/slide2.jpg" alt="Project#" height="250" width="350">
             <div class="side">
                 <div class="content">
-                    <h4>Project 1</h4>
+                    <h4>Project 2</h4>
                     <hr>
                     <p class="about">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam eligendi voluptatibus ex, optio impedit cum. Possimus quasi, optio libero, deleniti et nulla alias incidunt perferendis totam eaque ab accusantium eos officia labore eveniet rerum ducimus excepturi voluptate. Earum, tempore, veritatis labore illo animi amet porro reiciendis explicabo iste, cupiditate debitis!</p>
                 </div>
@@ -63,10 +63,10 @@
             </div>
         </div>
         <div class="card">
-            <img src="./assets/placeholder.jpg" alt="Project#" height="250" width="350">
+            <img src="./assets/slide3.jpg" alt="Project#" height="250" width="350">
             <div class="side">
                 <div class="content">
-                    <h4>Project 1</h4>
+                    <h4>Project 3</h4>
                     <hr>
                     <p class="about">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam eligendi voluptatibus ex, optio impedit cum. Possimus quasi, optio libero, deleniti et nulla alias incidunt perferendis totam eaque ab accusantium eos officia labore eveniet rerum ducimus excepturi voluptate. Earum, tempore, veritatis labore illo animi amet porro reiciendis explicabo iste, cupiditate debitis!</p>
                 </div>
