--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     </nav>
     <main>
         <h3 class="reach">Reach Out Directly</h3>
-        <form action="mailto:you@yourwebsite.com">
+        <form action="mailto:deven.h.j.patel+developer@gmail.com">
                 <div class="formtop">
                     <div class="labels">
                         <label class="top" for="email">Enter your email:</label>
@@ -41,7 +41,7 @@
                     </div>
                     <br>
                     <div class="fields">
-                        <input nametype="email" id="email" name="email">
+                        <input type="email" id="email" name="email">
                         <textarea name="message" rows="20" cols="80"></textarea>
                     </div>
                 </div>
